Fix overflow.

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -260,6 +260,7 @@ footer {
     display: flex;
     justify-content: center;
     margin-top: 0.5em;
+    flex-wrap: wrap;
     a {
       padding-left: 0.5em;
       padding-right: 0.5em;
